--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <div id="mainwrap" class="container">
-        <a href="https://github.com/emmett9001/mrSchemato"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+        <a href="https://github.com/Parsely/mrSchemato"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <div class="hero-unit">
             <h1>schema.to</h1>
             <h4>Semantic markup is cool again</h4>
@@ -130,7 +130,7 @@
                  This validator reads the latest official versions of the metadata standards it tracks (usually in the Turtle RDF format) and compares the validated document's metadata content against these standards. The standards define a number of classes, each of which is permitted to contain certain data members. This validator performs cross-checks to ensure that any data members present are valid, unduplicated, and in the right places.
             </div>
             <div class="span6">
-                schema.to is written and maintained by Emmett Butler and powered by W3C's semantic web tools for Python, written by Ivan Herman - specifically <a href="https://github.com/RDFLib/Pymicrodata">pyMicrodata</a> and <a href="https://github.com/RDFLib/PyRDFa">pyRdfa</a>. If you'd like to contribute to the project, <a href="http://github.com/emmett9001/mrSchemato">fork it on github</a>.
+                schema.to is written and maintained by Emmett Butler and powered by W3C's semantic web tools for Python, written by Ivan Herman - specifically <a href="https://github.com/RDFLib/Pymicrodata">pyMicrodata</a> and <a href="https://github.com/RDFLib/PyRDFa">pyRdfa</a>. If you'd like to contribute to the project, <a href="http://github.com/Parsely/mrSchemato">fork it on github</a>.
             </div>
         </div>
         <hr>
