--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
         <hr>
         <footer>
             <p>&copy; <a href="http://emmettbutler.com">Emmett Butler</a>, <a href="http://parse.ly">Parse.ly, Inc.</a> 2012</p>
-            <div class="footer-logo-container">Powered by<br/><a href="http://parse.ly"><img class="footer-logo" src="/static/img/footer_logo.png"/></a></div>
+            <div class="footer-logo-container">Powered by<a href="http://parse.ly"><img class="footer-logo" src="/static/img/footer_logo.png"/></a></div>
         </footer>
     </div>
 </body>
