improve fabfile and test it

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <! DOCTYPE HTML PUBLIC>
 <html>
 <head>
+    <!-- im in ur source, testin ur fabfilez -->
     <title>Mr. Schemato</title>
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="static/css/style.css"/>
