change default site

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -43,7 +43,7 @@
             <fieldset>
                 <label for='link'>Link to validate:</label>
                 <input type='text' name='link' id='link'
-                value='http://www.nytimes.com/2012/07/19/world/middleeast/syrian-rebels-hone-bomb-skills-military-analysis.html' size="100"/>
+                value='http://semanticweb.com/the-impact-of-rdfa_b35003' size="100"/>
                 <input class="btn" type='submit' onclick=postData() href="#" id="submit" value="Validate &raquo;" />
             </fieldset>
         </form>
