website update with logo

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE HTML PUBLIC>
 <html>
 <head>
-    <title>Mr. Schemato</title>
+    <title>schema.to</title>
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="static/css/style.css"/>
 
@@ -15,9 +15,10 @@
     <div id="mainwrap" class="container">
         <a href="https://github.com/Parsely/schemato"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <div class="hero-unit">
+            <img class="logo" src="static/img/schemato.png" />
             <h1>schema.to</h1>
             <h4>Semantic markup is cool again</h4>
-            <p>Meet Mr. Schemato, the unified semantic web validator for the next generation of metadata.</p>
+            <p>Meet schemato, the unified semantic web validator for the next generation of metadata.</p>
         </div>
         <div class="row">
             <div class="span4">
@@ -36,7 +37,7 @@
         <hr>
         <div class="row">
             <div class="span12">
-                Mr. Schemato provides comprehensive validation of the rNews, Schema.org, Facebook openGraph, and parsely-page metadata standards. Paste a URL below to see how any site's implementation stacks up.
+                schemato provides comprehensive validation of the rNews, Schema.org, Facebook openGraph, and parsely-page metadata standards. Paste a URL below to see how any site's implementation stacks up.
             </div>
         </div>
         <form id="linkform">
