--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -18,7 +18,7 @@
             <img class="logo" src="static/img/schemato.png" />
             <h1>schema.to</h1>
             <h4>Semantic markup is cool again</h4>
-            <p>Meet schemato, the unified semantic web validator for the next generation of metadata.</p>
+            <p>Meet schemato, the unified validator for the next generation of metadata.</p>
         </div>
         <div class="row">
             <div class="span4">
@@ -59,7 +59,7 @@
                  This validator reads the latest official versions of the metadata standards it tracks (usually in the Turtle RDF format) and compares the validated document's metadata content against these standards. The standards define a number of classes, each of which is permitted to contain certain data members. This validator performs cross-checks to ensure that any data members present are valid, unduplicated, and in the right places.
             </div>
             <div class="span6">
-                schema.to is written and maintained by Emmett Butler and powered by W3C's semantic web tools for Python, written by Ivan Herman - specifically <a href="https://github.com/RDFLib/Pymicrodata">pyMicrodata</a> and <a href="https://github.com/RDFLib/PyRDFa">pyRdfa</a>. If you'd like to contribute to the project, <a href="http://github.com/Parsely/schemato">fork it on github</a>.
+                schema.to is written and maintained by Emmett Butler and powered by W3C's semantic web tools for Python, written by Ivan Herman - specifically <a href="https://github.com/RDFLib/Pymicrodata">pyMicrodata</a> and <a href="https://github.com/RDFLib/PyRDFa">pyRdfa</a>. If you'd like to contribute to the project, <a href="http://github.com/Parsely/schemato">fork it on github</a>, email hello@parsely.com.
             </div>
         </div>
         <hr>
